testsuite/tests/lexical_envs/invalid_entity_resolver/test.out
== Bad return type ==
test.py:41: error: Entity resolver properties must return entities (got FooNode.entity.array)
== Has dynamic variable ==
test.py:41: error: Entity resolver properties must have no dynamically bound variable
== Has arguments ==
test.py:41: error: Entity resolver properties must have no argument
Done
